syntax = "proto3";

option csharp_namespace = "SevenTiny.Cloud.FaaS.GRpc";

package SevenTiny.Cloud.FaaS;

// 动态脚本执行器
service DynamicScriptExecutor {
	rpc CheckScript (DynamicScript) returns (DynamicScriptExecuteResult);
	rpc Execute (DynamicScript) returns (DynamicScriptExecuteResult);
}

message Empty{

}

enum DynamicScriptLanguage {
	Unknown = 0;
	Csharp = 1;
}

message DynamicScript {
    int32 TenantId = 1;
    string Script = 2;
    string ClassFullName = 3;
    string FunctionName = 4;
    string Parameters = 5;
    DynamicScriptLanguage Language = 6;
    bool IsExecutionStatistics = 7;
    bool IsTrustedScript = 8;
    int32 MillisecondsTimeout = 9;
}

// The response message containing the greetings.
message DynamicScriptExecuteResult {
	bool IsSuccess = 1;
    string Message = 2;
    string Data = 3;
    int64 ProcessorTime = 4;
    int64 TotalMemoryAllocated = 5;
}